# Rectangling-Panoramic-Images-via-Warping

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: GlobalWraping.h  SeamCarving.h  common.h  imgRecting.h  lsd.h
src/: GlobalWraping.cpp  SeamCarving.cpp  common.cpp  imgRecting.cpp
